# docs/swagger.json
@@ -752,10 +752,21 @@
                 "taxonomies": {
                     "type": "array",
                     "items": {
-                        "type": "integer"
+                        "$ref": "#/definitions/req.UpdateJobTaxonomyModel"
                     }
                 },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "req.UpdateJobTaxonomyModel": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "type": {
                     "type": "string"
                 }
             }
