# internal/api/job/apimodels/req/job_update_req.go
@@ -2,12 +2,16 @@ package req
 
 import "github.com/gin-gonic/gin"
 
+type UpdateJobTaxonomyModel struct {
+	Type string `json:"type"`
+	Id   int    `json:"id"`
+}
 type UpdateJobReqModel struct {
-	Title       string `json:"title,omitempty"`
-	Taxonomies  []int  `json:"taxonomies,omitempty"`
-	ApplyTo     string `json:"apply_to,omitempty"`
-	Status      string `json:"status,omitempty"`
-	Description string `json:"description,omitempty"`
+	Title       string                   `json:"title,omitempty"`
+	Taxonomies  []UpdateJobTaxonomyModel `json:"taxonomies,omitempty"`
+	ApplyTo     string                   `json:"apply_to,omitempty"`
+	Status      string                   `json:"status,omitempty"`
+	Description string                   `json:"description,omitempty"`
 }
 
 func (model *UpdateJobReqModel) Validate(c *gin.Context) error {
